# bp-wearable

./: .gitignore
backend/: package-lock.json  package.json  server.js
esp32-firmware/: MAX30102_1.ino
esp32-firmware/sketch_mar30a/: sketch_mar30a.ino
esp32-s3-idf/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32-s3-idf/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  max30102.c  max30102.h  signal_processing.c  signal_processing.h  telemetry.h  wifi_http.c  wifi_http.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
